--- a/code/test.ipynb
+++ b/code/test.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/parth/anaconda3/envs/dl/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch as th\n",
     "import pipeline\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -58,10 +59,16 @@
     "print(f\"Using Device {DEVICE}\")\n",
     "\n",
     "tokenizer = CLIPTokenizer(\"../data/vocab.json\", merges_file=\"../data/merges.txt\")\n",
-    "model_file = \"../data/hollie-mengert.ckpt\"\n",
-    "models = model_loader.preload_models_from_standard_weights(model_file, device=DEVICE)\n",
-    "\n",
-    "\n",
+    "model_file = \"../data/v1-5-pruned-emaonly.ckpt\"\n",
+    "models = model_loader.preload_models_from_standard_weights(model_file, device=DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## TEXT TO IMAGE\n",
     "\n",
     "prompt = \"A Santa claus riding a sledge, highly detailed, ultra sharp, 8k resolution, cinematic\"\n",
